feat: Añadidas etiquetas og meta para SEO

--- a/index.html
+++ b/index.html
@@ -6,6 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/css/main.css" rel="stylesheet" />
     <title>Aurora Calendar</title>
+    <!-- Primary Meta Tags -->
+    <meta
+      name="title"
+      content="Aurora Calendar | Crea eventos y organiza actividades."
+    />
+    <meta
+      name="description"
+      content="Aurora es una herramienta de gestión de eventos que te ayuda a organizar tareas y colaborar con tu equipo."
+    />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://auroracalendar.netlify.app/" />
+    <meta
+      property="og:title"
+      content="Aurora Calendar | Crea eventos y organiza actividades."
+    />
+    <meta
+      property="og:description"
+      content="Aurora es una herramienta de gestión de eventos que te ayuda a organizar tareas y colaborar con tu equipo."
+    />
+    <meta property="og:image" content="./og_meta_aurora.jpg" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://auroracalendar.netlify.app/"
+    />
+    <meta
+      property="twitter:title"
+      content="Aurora Calendar | Crea eventos y organiza actividades."
+    />
+    <meta
+      property="twitter:description"
+      content="Aurora es una herramienta de gestión de eventos que te ayuda a organizar tareas y colaborar con tu equipo."
+    />
+    <meta property="twitter:image" content="./og_meta_aurora.jpg" />
   </head>
   <body>
     <div id="app"></div>
